Add tab mechanism and tab components in control menu

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,5 +1,8 @@
 // colors
 $primary-bg-light-color: #DED5C8;
+$primary-bg-heavy-color: #BC6C25;
+$primary-bg-medium-color: #DDA15E;
+$primary-placeholder-light-color:#FEFAE0;
 $primary-text-heavy-color: #36332E;
 
 // breakpoints
@@ -8,7 +11,7 @@ $tablet-breakpoint: 76.8rem;
 $mobile-breakpoint: 32rem;
 
 // radius
-$section-radius: 1rem;
+$section-radius: 24%;
 $element-radius: 0.5rem;
 
 // layout gap space
