--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -4,6 +4,7 @@ $primary-bg-heavy-color: #BC6C25;
 $primary-bg-medium-color: #DDA15E;
 $primary-placeholder-light-color:#FEFAE0;
 $primary-text-heavy-color: #36332E;
+$primary-text-light-color: #FFFFFF;
 
 // breakpoints
 $desktop-breakpoint: 128rem;
