Rearrange control menu and map position to make menu float on the map

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -12,7 +12,7 @@ $tablet-breakpoint: 76.8rem;
 $mobile-breakpoint: 32rem;
 
 // radius
-$section-radius: 24%;
+$section-radius: 1.5rem;
 $element-radius: 0.5rem;
 
 // layout gap space
