--- a/src/components/ControlMenu/ControlMenu.scss
+++ b/src/components/ControlMenu/ControlMenu.scss
@@ -2,17 +2,20 @@
 @use "../../styles/partials/mixin" as *;
 
 .control-menu {
-    width: 100vw;
     position: fixed;
     bottom: 0;
-    background-color: $primary-placeholder-light-color;
+
+    &__group{
+        background-color: $primary-placeholder-light-color;
+        margin: 1rem;
+        border-radius: $section-radius;
+        width: 100%;
+    }
 }
 
 .tab-content{
     width: 100%;
-    height: 30vh;
     padding: $mobile-row-gap $mobile-col-gap;
-    border-radius: $element-radius;
 
     &__wrapper{
         height: 100%;
