--- a/src/components/ControlMenu/ControlMenu.scss
+++ b/src/components/ControlMenu/ControlMenu.scss
@@ -10,7 +10,8 @@
         padding: $mobile-row-gap $mobile-col-gap;
         margin: 1rem;
         border-radius: $section-radius;
-        width: 100%;
+        // width: 100%;
+        max-width: 100vw;
         display: flex;
         flex-direction: column;
         row-gap: $mobile-row-gap;
