--- a/src/components/RouteControls/RouteControls.scss
+++ b/src/components/RouteControls/RouteControls.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     row-gap: $mobile-row-gap;
-    background-color: $primary-bg-light-color;
+    background-color:#FFFFFF;
     padding: 1rem;
     border-radius: $element-radius;
 }
