--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -13,7 +13,7 @@ $mobile-breakpoint: 32rem;
 
 // radius
 $section-radius: 1.5rem;
-$element-radius: 0.5rem;
+$element-radius: 0.8rem;
 
 // layout gap space
 $desktop-col-gap: 2.4rem;
@@ -26,3 +26,6 @@ $tablet-row-gap:2.4rem;
 $mobile-row-gap:1.6rem;
 $tablet-row-gap--top: 3.6rem;
 $mobile-row-gap--top: 2.4rem;
+
+
+$form-el-border: 1px solid #d9d9d9;
