Style route control components

--- a/src/components/FormInput/FormInput.scss
+++ b/src/components/FormInput/FormInput.scss
@@ -8,4 +8,8 @@
 	padding: 1rem 1.2rem 1rem var(--prefix-width);
 	background-color: white;
 	border: $form-el-border;
+
+	&__wrapper{
+		position: relative;
+	}
 }
