--- a/src/components/RouteControls/RouteControls.scss
+++ b/src/components/RouteControls/RouteControls.scss
@@ -8,4 +8,28 @@
     background-color:#FFFFFF;
     padding: 1rem;
     border-radius: $element-radius;
+    border: $form-el-border;
+
+    &__input-label{
+        font-size: 1.4rem;
+        width: 40%;
+    }
+
+    &__input-group-wrapper{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__input-wrapper{
+        width: 75%;
+        display: flex;
+
+    }
+
+    &__input-middle-wrapper{
+        width: 60%;
+    }
+    &__input-right-wrapper{
+        width: 40%;
+    }
 }
