--- a/src/components/RouteControls/RouteControls.scss
+++ b/src/components/RouteControls/RouteControls.scss
@@ -8,7 +8,7 @@
     background-color:#FFFFFF;
     padding: 1rem;
     border-radius: $element-radius;
-    border: $form-el-border;
+    border: $el-border;
 
     &__input-label{
         font-size: 1.4rem;
