--- a/src/components/ControlMenu/ControlMenu.scss
+++ b/src/components/ControlMenu/ControlMenu.scss
@@ -9,9 +9,8 @@
 
 
     &__group{
-        background-color:rgb(252, 252, 253);
+        background-color:$primary-bg-light-color;
         padding: $mobile-row-gap $mobile-col-gap;
-        // margin: 1rem;
         border-radius: $section-radius;
         width: 100vw;
         display: flex;
@@ -19,6 +18,7 @@
         align-items: center;
         row-gap: $mobile-row-gap;
         @include el-shadow;
+        border: $el-border;
     }
 
     &__icon{
