--- a/src/components/ControlTabButton/ControlTabButton.scss
+++ b/src/components/ControlTabButton/ControlTabButton.scss
@@ -2,22 +2,17 @@
 @use "../../styles/partials/mixin" as *;
 
 .control-button {
-	background-color: $primary-bg-heavy-color;
-	border-radius: $element-radius;
-	padding: 0.8rem 0.8rem;
+	padding: 0.8rem 0rem;
 	font-size: 1.4rem;
-	min-width: 6.5rem;
 
-    &__icon{
-        height: 2.4rem;
-        width: 2.4rem;
-    }
+	border-bottom: 2px solid;
+
+	&__icon {
+		height: 2.4rem;
+		width: 2.4rem;
+	}
 
 	&--active {
-		color: $primary-text-light-color;
-
-		& .control-button__icon-path {
-			fill: $primary-text-light-color;
-		}
+		border-bottom-color: var(--underline);
 	}
 }
