--- a/src/components/FormInput/FormInput.scss
+++ b/src/components/FormInput/FormInput.scss
@@ -7,7 +7,7 @@
 	border-radius: $element-radius;
 	padding: 1rem 1.2rem 1rem var(--prefix-width);
 	background-color: white;
-	border: $form-el-border;
+	border: $el-border;
 
 	&__wrapper{
 		position: relative;
