--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,5 +1,5 @@
 // colors
-$primary-bg-light-color: #DED5C8;
+$primary-bg-light-color: rgb(252, 252, 253);
 $primary-bg-heavy-color: #BC6C25;
 $primary-bg-medium-color: #DDA15E;
 $primary-placeholder-light-color:#FEFAE0;
@@ -28,4 +28,4 @@ $tablet-row-gap--top: 3.6rem;
 $mobile-row-gap--top: 2.4rem;
 
 
-$form-el-border: 1px solid #d9d9d9;
+$el-border: 1px solid #d9d9d9;
