--- a/src/components/ControlMenu/ControlMenu.scss
+++ b/src/components/ControlMenu/ControlMenu.scss
@@ -2,44 +2,31 @@
 @use "../../styles/partials/mixin" as *;
 
 .control-menu {
-    max-width: 100vw;
-    position: fixed;
-    left: 50%;
-    transform: translate(-50%, -100%);
+	max-width: 100vw;
+	position: fixed;
+	left: 50%;
+	transform: translate(-50%, -100%);
 
+	@include desktop {
+		height: 100vh;
+		position: relative;
+		transform: translate(0, 0);
+		transform: none;
+		left: 0;
+	}
 
-    &__group{
-        background-color:$primary-bg-light-color;
-        padding: $mobile-row-gap $mobile-col-gap;
-        border-radius: $section-radius;
-        width: 100vw;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        row-gap: $mobile-row-gap;
-        @include el-shadow;
-        border: $el-border;
-    }
+	&__wrapper--mobile {
+		@include desktop {
+			display: none;
+		}
+	}
 
-    &__icon{
-        width: 2rem;
-        height: 2rem;
-        display: none;
-        
-        &--active{
-            display: block;
-        }
-    }
+	&__wrapper--desktop {
+		display: none;
+        background-color: transparent;
 
-    &__tab{
-        width: 100%;
-    }
-}
-
-.tab-content{
-    width: 100%;
-
-    &__wrapper{
-        height: 100%;
-    }
+		@include desktop {
+			display: block;
+		}
+	}
 }
