--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -1,4 +1,12 @@
+@use "../../styles/partials/variables" as *;
+@use "../../styles/partials/mixin" as *;
+
 .home {
     height: 100vh;
     width: 100vw;
+
+    @include desktop {
+        display: flex;
+        flex-direction: row-reverse;
+    }
 }
