--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -2,11 +2,22 @@
 @use "../../styles/partials/mixin" as *;
 
 .home {
-    height: 100vh;
-    width: 100vw;
+	height: 100vh;
+	width: 100vw;
 
-    @include desktop {
-        display: flex;
-        flex-direction: row-reverse;
-    }
+	@include desktop {
+		display: flex;
+		flex-direction: row-reverse;
+	}
+
+	&__desktop-right-wrapper {
+		height: 100vh;
+		width: 100vw;
+
+		@include desktop {
+			width: calc(100vw - 40rem);
+			display: flex;
+			flex-direction: column-reverse;
+		}
+	}
 }
