--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -47,4 +47,14 @@
 			}
         }
     }
+
+	&__profile-icon{
+		width: 3rem;
+	}
+
+	&__profile{
+		@include desktop{
+			margin: 0.5rem 1rem 0.5rem 0rem;
+		}
+	}
 }
