--- a/src/components/RouteDetailsPanel/RouteDetailsPanel.scss
+++ b/src/components/RouteDetailsPanel/RouteDetailsPanel.scss
@@ -5,8 +5,20 @@
 	background-color: $primary-bg-light-color;
     border: $el-border;
     padding: $mobile-row-gap $mobile-col-gap;
-    overflow-x: hidden;
-    // height: 100%;
+    height: auto;
+
+    &__top-wrapper{
+        display: flex;
+        align-items:baseline;
+        column-gap: 1rem;
+
+    }
+
+    &__save-icon{
+        width: 2rem;
+        fill: red;
+    }
+
     &__title{
         font-size: 1.5rem;
         margin-bottom: $mobile-row-gap;
