--- a/src/components/RoutePlacesList/RoutePlacesList.scss
+++ b/src/components/RoutePlacesList/RoutePlacesList.scss
@@ -1,6 +1,15 @@
 .route-place-list {
 	display: flex;
-	overflow: hidden;
+	overflow-x: scroll;
+	&::-webkit-scrollbar {
+		width: 10px;
+		height: 10px;
+	}
+
+	&::-webkit-scrollbar-thumb {
+		background: rgba(90, 90, 90);
+	}
+
 	&__wrapper {
 		display: flex;
 	}
