Adjust the style of profile page

--- a/src/components/ProfileInfoPanel/ProfileInfoPanel.scss
+++ b/src/components/ProfileInfoPanel/ProfileInfoPanel.scss
@@ -5,7 +5,7 @@
     background-color: rgb(233, 233, 233);
     display: flex;
     justify-content: center;
-    padding: 1.5rem;
+    padding-top: 2rem;
 
     @include desktop{
         height: 100%;
