--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,7 +9,6 @@
 	border: $el-border;
 	border-bottom-left-radius: $section-radius;
 	border-bottom-right-radius: $section-radius;
-
 	@include el-shadow;
 
 	@include desktop {
@@ -21,39 +20,61 @@
 		padding: 0;
 	}
 
+	&--profile {
+		@include desktop {
+			position: relative;
+			top: 0;
+			right: 0;
+			border-bottom-left-radius: $section-radius;
+			border-bottom-right-radius: $section-radius;
+			padding: 2rem 2rem;
+			max-width: $desktop-breakpoint;
+			margin: auto;
+			width: 70vw;
+		}
+	}
+
 	&__logo {
 		height: 3rem;
 
 		@include desktop {
 			display: none;
+			&--profile {
+				display: inline-block;
+			}
 		}
 	}
 
-	&__signin-button{
-        border-radius: $el-border;
+	&__signin-button {
+		border-radius: $el-border;
 		margin: 0;
-        &-text {
-            font-size: 1.6rem;
-            font-family: "Poppins";
-            font-weight: 300;
-            text-decoration: underline;
-            text-decoration-color: blue;
-            line-height: 1rem;
+		&-text {
+			font-size: 1.6rem;
+			font-family: "Poppins";
+			font-weight: 300;
+			text-decoration: underline;
+			text-decoration-color: blue;
+			line-height: 1rem;
 
 			@include desktop {
 				font-size: 1.8rem;
 				text-decoration: none;
 				margin: 1.5rem 2rem 1.5rem 0.8rem;
-			}
-        }
-    }
 
-	&__profile-icon{
+				&--profile {
+					text-decoration: underline;
+					text-decoration-color: blue;
+				}
+			}
+		}
+	}
+
+	&__profile-icon {
 		width: 3rem;
 	}
 
-	&__profile{
-		@include desktop{
+	&__profile {
+		@include desktop {
 			margin: 0.5rem 1rem 0.5rem 0rem;
 		}
 	}
