--- a/src/components/RouteDetailsPanel/RouteDetailsPanel.scss
+++ b/src/components/RouteDetailsPanel/RouteDetailsPanel.scss
@@ -3,24 +3,27 @@
 
 .route-panel {
 	background-color: $primary-bg-light-color;
-    border: $el-border;
-    padding: $mobile-row-gap $mobile-col-gap;
-    height: auto;
+	border: $el-border;
+	padding: 2rem;
+	height: auto;
+	display: flex;
+	flex-direction: column;
+	row-gap: $mobile-row-gap;
 
-    &__top-wrapper{
-        display: flex;
-        align-items:baseline;
-        column-gap: 1rem;
+	&__top-wrapper {
+		display: flex;
+		align-items: center;
+		align-content: center;
+		column-gap: 1rem;
+	}
 
-    }
+	&__save-icon {
+		width: 2rem;
+		fill: red;
+	}
 
-    &__save-icon{
-        width: 2rem;
-        fill: red;
-    }
-
-    &__title{
-        font-size: 1.5rem;
-        margin-bottom: $mobile-row-gap;
-    }
+	&__title {
+		font-size: 1.5rem;
+		// margin-bottom: $mobile-row-gap;
+	}
 }
