--- a/src/components/RoutePlacesList/RoutePlacesList.scss
+++ b/src/components/RoutePlacesList/RoutePlacesList.scss
@@ -1,16 +1,24 @@
 .route-place-list {
 	display: flex;
 	overflow-x: scroll;
+	padding-bottom: 1rem;
 	&::-webkit-scrollbar {
-		width: 10px;
-		height: 10px;
+		width: 1rem;
+		height: 1rem;
 	}
 
 	&::-webkit-scrollbar-thumb {
-		background: rgba(90, 90, 90);
+		background: rgb(175, 175, 175);
+		border-radius: 10px;
+		margin-bottom: 3rem;
 	}
 
 	&__wrapper {
 		display: flex;
+	}
+
+	&__next-icon {
+		width: 4rem;
+		margin: 1rem;
 	}
 }
