--- a/src/pages/ProfilePage/ProfilePage.scss
+++ b/src/pages/ProfilePage/ProfilePage.scss
@@ -1,14 +1,13 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/mixin" as *;
 
-.profile{
-    @include desktop{
-        display: flex;
-        background-color: rgb(233, 233, 233);
-
-        &__info-panel{
-            width: 30%;
-            height: 100%;
-        }
-    }
+.profile {
+	&__saved-route {
+		display: flex;
+		row-gap: $mobile-row-gap;
+		justify-content: center;
+	}
+	@include desktop {
+		background-color: rgb(233, 233, 233);
+	}
 }
