--- a/src/components/FormInputPrefix/FormInputPrefix.scss
+++ b/src/components/FormInputPrefix/FormInputPrefix.scss
@@ -6,7 +6,7 @@
     top:0rem;
     left:0rem;
     padding: 1rem 1rem;
-    border-right: $el-border;
+    border-right: $element-border;
     display: flex;
 
     &__text{
