--- a/src/components/ProfileInfoPanel/ProfileInfoPanel.scss
+++ b/src/components/ProfileInfoPanel/ProfileInfoPanel.scss
@@ -1,14 +1,14 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/mixin" as *;
 
-.profile-info{
-    background-color: rgb(233, 233, 233);
-    display: flex;
-    justify-content: center;
-    padding-top: 2rem;
+.profile-info {
+	background-color: $primary-background-color;
+	display: flex;
+	justify-content: center;
+	padding-top: 2rem;
 
-    @include desktop{
-        height: 100%;
-        width: 100%;
-    }
+	@include desktop {
+		height: 100%;
+		width: 100%;
+	}
 }
