--- a/src/components/ProfileSavedRoute/ProfileSavedRoute.scss
+++ b/src/components/ProfileSavedRoute/ProfileSavedRoute.scss
@@ -17,7 +17,7 @@
 	&__list {
 		border-radius: $section-radius;
 		width: 90vw;
-		background-color: #ffffff;
+		background-color: $primary-section-background-color;
 		padding: 2rem;
 
 		@include desktop {
