--- a/src/components/SignupInput/SignupInput.scss
+++ b/src/components/SignupInput/SignupInput.scss
@@ -4,19 +4,18 @@
 .signup-input {
 	height: 4rem;
 	padding: 1rem 1.2rem 1rem 1.2rem;
-	background-color: white;
-    width: 100%;
+	background-color: $primary-input-background-color;
+	width: 100%;
 	border: none;
-    border-bottom: $el-border;
-    border-radius: $element-radius;
+	border-bottom: $element-border;
+	border-radius: $element-radius;
 
-    &__wrapper{
-        display: flex;
-        flex-direction: column;
-        
-    }
+	&__wrapper {
+		display: flex;
+		flex-direction: column;
+	}
 
-    &__label {
-        margin-bottom: 0.5rem;
-    }
+	&__label {
+		margin-bottom: 0.5rem;
+	}
 }
