--- a/src/pages/AuthPage/AuthPage.scss
+++ b/src/pages/AuthPage/AuthPage.scss
@@ -15,7 +15,7 @@
 		align-items: center;
 		align-content: space-around;
 		width: 90vw;
-		background-color: #e9e9e97b;
+		background-color: $secondary-background-color-transparent;
 
 		border-radius: $section-radius;
 		top: 50%;
@@ -26,7 +26,7 @@
 		@include desktop {
 			position: relative;
 			width: 50vw;
-			background-color: #e9e9e9;
+			background-color: $secondary-background-color;
 			border-radius: none;
 			transform: translate(0, 0);
 			transform: none;
@@ -56,7 +56,7 @@
 	}
 
 	&__tagline {
-		color: white;
+		color: $primary-text-light-color;
 		font-size: 5rem;
 
 		@include desktop {
@@ -65,7 +65,7 @@
 	}
 
 	&__image-credit {
-		background-color: rgba(208, 233, 231, 0.676);
+		background-color: $secondary-info-background-color;
 		position: absolute;
 		padding: 0.1rem 0.3rem;
 		bottom: 1%;
