--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,10 +1,22 @@
 // colors
-$primary-bg-light-color: rgb(252, 252, 253);
-$primary-bg-heavy-color: #BC6C25;
-$primary-bg-medium-color: #DDA15E;
-$primary-placeholder-light-color:#FEFAE0;
-$primary-text-heavy-color: #36332E;
 $primary-text-light-color: #FFFFFF;
+
+$primary-background-color: rgb(233, 233, 233);
+$secondary-background-color: #e9e9e9;
+$secondary-background-color-transparent: #e9e9e97b;
+
+$primary-panel-background-color:rgb(252, 252, 253);
+$primary-section-background-color:#FFFFFF;
+$primary-info-background-color: #696666;
+$secondary-info-background-color:rgba(208, 233, 231, 0.676);
+$primary-input-background-color:#FFFFFF;
+
+$primary-card-background-color:#FFFFFF;
+$secondary-card-background-color:rgba(107, 207, 207, 0.811);
+
+$secondary-button-background-color:#d9d9d9;
+$primary-cta-button-background-color:#FFFFFF;
+$primary-cta-button-color: #455eed;
 
 // breakpoints
 $desktop-breakpoint: 128rem;
@@ -28,4 +40,4 @@ $tablet-row-gap--top: 3.6rem;
 $mobile-row-gap--top: 2.4rem;
 
 
-$el-border: 1px solid #d9d9d9;
+$element-border: 1px solid #d9d9d9;
