--- a/src/components/ControlMenuGroup/ControlMenuGroup.scss
+++ b/src/components/ControlMenuGroup/ControlMenuGroup.scss
@@ -10,9 +10,13 @@
 	flex-direction: column;
 	align-items: center;
 	row-gap: $mobile-row-gap;
-	@include el-shadow;
+	@include element-shadow;
 	border: $element-border;
 	max-width: 50rem;
+
+	@include tablet {
+		padding: $tablet-row-gap $tablet-col-gap;
+	}
 
 	@include desktop {
 		width: 40rem;
