--- a/src/components/RouteDetailsPanel/RouteDetailsPanel.scss
+++ b/src/components/RouteDetailsPanel/RouteDetailsPanel.scss
@@ -4,18 +4,21 @@
 .route-panel {
 	background-color: $primary-background-color;
 	border: $element-border;
-	padding: 2rem;
+	padding: $mobile-row-gap $mobile-col-gap;
 	height: auto;
 	display: flex;
 	flex-direction: column;
 	row-gap: $mobile-row-gap;
+
+	@include tablet {
+		padding: $tablet-row-gap $tablet-col-gap;
+	}
 
 	&__top-wrapper {
 		display: flex;
 		align-items: center;
 		align-content: center;
 		column-gap: 1rem;
-
 		justify-content: space-between;
 	}
 
@@ -29,12 +32,12 @@
 		fill: red;
 	}
 
-	&__show-map-button{
+	&__show-map-button {
 		border: $element-border;
 		border-radius: $element-radius;
 		padding: 1rem;
 
-		&:hover{
+		&:hover {
 			background-color: $secondary-button-background-color;
 			color: $primary-text-light-color;
 		}
@@ -44,17 +47,18 @@
 		font-size: 1.5rem;
 	}
 
-	&__route-number{
+	&__route-number {
 		display: flex;
 		column-gap: 1rem;
 		padding-right: 2rem;
 	}
 
-	&__route-distance, &__route-distance{
+	&__route-distance,
+	&__route-distance {
 		padding: 0.5rem 0.8rem;
 		border-radius: 1rem;
 		border: $element-border;
 		background-color: $primary-info-background-color;
-		color:$primary-text-light-color;
+		color: $primary-text-light-color;
 	}
 }
