--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -78,8 +78,11 @@
 	}
 
 	&__profile {
+		display: flex;
+		align-items: center;
+		flex-direction: column;
 		@include desktop {
-			margin: 0.5rem 1rem 0.5rem 0rem;
+			padding: 1rem;
 		}
 	}
 }
