Convert user related state and logic into redux store and user utils

--- a/src/components/SignupVerify/SignupVerify.scss
+++ b/src/components/SignupVerify/SignupVerify.scss
@@ -9,4 +9,10 @@
 		font-size: 2rem;
 		text-align: center;
 	}
+
+	&__need-verify{
+		color: green;
+		font-size: 2rem;
+		text-align: center;
+	}
 }
