--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,5 +1,6 @@
 // colors
 $primary-text-light-color: #FFFFFF;
+$primary-text-black-color: black;
 
 $primary-background-color: rgb(233, 233, 233);
 $secondary-background-color: #e9e9e9;
@@ -14,9 +15,12 @@ $primary-input-background-color:#FFFFFF;
 $primary-card-background-color:#FFFFFF;
 $secondary-card-background-color:rgba(107, 207, 207, 0.811);
 
+$primary-button-background-color:#696666;
 $secondary-button-background-color:#d9d9d9;
 $primary-cta-button-background-color:#FFFFFF;
 $primary-cta-button-color: #455eed;
+
+$direction-icon-color: #696666;
 
 // breakpoints
 $desktop-breakpoint: 128rem;
