--- a/src/components/ProfileSavedRoute/ProfileSavedRoute.scss
+++ b/src/components/ProfileSavedRoute/ProfileSavedRoute.scss
@@ -7,22 +7,24 @@
 	row-gap: 1rem;
 	padding: 1rem;
 	border-radius: $section-radius;
-
-	&__top-wrapper {
-		display: flex;
-		justify-content: space-between;
-		padding: 1rem 2rem;
-	}
+	width: 100% ;
 
 	&__list {
-		border-radius: $section-radius;
-		width: 90vw;
-		background-color: $primary-section-background-color;
 		padding: 2rem;
+		display: flex;
+		flex-wrap: wrap;
+		column-gap: $tablet-col-gap;
+		row-gap: $tablet-row-gap;
+		align-items: flex-start;
+	
+		height: 80vh;
+		overflow-y: scroll;
+		overflow-x: hidden;
+
+		@include scrollbar;
 
 		@include desktop {
-			width: 70vw;
-			max-width: $desktop-breakpoint;
+			height: 100%;
 		}
 
 		& .route-panel:first-child {
@@ -34,12 +36,20 @@
 			border-bottom-left-radius: $section-radius;
 			border-bottom-right-radius: $section-radius;
 		}
+	}
+
+	&__controls{
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		padding: 0rem 2rem;
+
+		&-sort-wrapper{
+			display: flex;
+			column-gap: 1rem;
+		}
 
 		&-page-wrapper {
-			padding: 2rem;
-			display: flex;
-			justify-content: flex-end;
-
 			&--top {
 				padding: 0rem;
 			}
