--- a/src/components/RouteCard/RouteCard.scss
+++ b/src/components/RouteCard/RouteCard.scss
@@ -2,10 +2,14 @@
 @use "../../styles/partials/mixin" as *;
 
 .route-card {
-	width: 30rem;
+	
 	border-radius: $element-radius;
 	border: $element-border;
 	@include element-shadow;
+
+	@include tablet{
+		width: 30rem;
+	}
 
 	&__photo-wrapper {
 		margin: 0;
