Add signout button in profile page menu, adjust style of profile page and path selector

--- a/src/components/ControlMenuGroup/ControlMenuGroup.scss
+++ b/src/components/ControlMenuGroup/ControlMenuGroup.scss
@@ -22,6 +22,8 @@
 		width: 40rem;
 		height: 100vh;
 		row-gap: $tablet-row-gap;
+		overflow-y: scroll;
+		@include scrollbar;
 	}
 
 	&__toggle-wrapper {
