--- a/src/components/RouteSelector/RouteSelector.scss
+++ b/src/components/RouteSelector/RouteSelector.scss
@@ -3,20 +3,25 @@
 
 .route-selector {
 	position: absolute;
-
-	top: 3rem;
-	left: 3rem;
+	font-size: 1.4rem;
+	top: 1rem;
+	left: 1rem;
 	background-color: $primary-panel-background-color;
 	border: $element-border;
 	border-radius: $section-radius;
 	display: flex;
 
+	@include desktop {
+		top: 2rem;
+		left: 2rem;
+	}
+
 	&__title {
-		padding: 1.5rem;
+		padding: 1rem;
 		border-right: $element-border;
 	}
 	&__button {
-		padding: 1.5rem;
+		padding: 1rem;
 		border-right: $element-border;
 
 		&--active {
@@ -26,11 +31,11 @@
 	}
 
 	&__path-text {
-		font-size: 1.8rem;
+		font-size: 1.4rem;
 	}
 
 	&__show-all-button {
-		padding: 1.5rem;
+		padding: 1rem;
 		border-top-right-radius: $section-radius;
 		border-bottom-right-radius: $section-radius;
 		&--active {
