--- a/src/styles/partials/_reset.scss
+++ b/src/styles/partials/_reset.scss
@@ -35,6 +35,7 @@ h3 {
 // LABELS & BUTTONS
 h4 {
 	margin: 0;
+	font-size: 1.4;
 }
 
 p {
@@ -58,4 +59,5 @@ a:visited {
 button {
 	background-color: transparent;
 	border: none;
+	padding: 0;
 }
