--- a/src/components/RouteDetailsPanel/RouteDetailsPanel.scss
+++ b/src/components/RouteDetailsPanel/RouteDetailsPanel.scss
@@ -10,10 +10,6 @@
 	flex-direction: column;
 	row-gap: $mobile-row-gap;
 
-	@include tablet {
-		padding: $tablet-row-gap $tablet-col-gap;
-	}
-
 	&__top-wrapper {
 		display: flex;
 		align-items: center;
@@ -25,16 +21,32 @@
 	&__top-left-wrapper {
 		display: flex;
 		align-items: center;
+		column-gap: 0.5rem;
 	}
 
 	&__title {
-		font-size: 1.5rem;
+		font-size: 1.4rem;
 	}
 
 	&__route-number {
 		display: flex;
-		column-gap: 1rem;
-		padding-right: 2rem;
+		column-gap: 0.5rem;
+		font-size: 1.2rem;
+
+		@include tablet {
+			column-gap: 1rem;
+		}
+
+		@include desktop {
+			padding-right: 2rem;
+		}
+	}
+
+	&__route-unit {
+		display: none;
+		@include tablet{
+			display: unset;
+		}
 	}
 
 	&__route-distance {
