--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -2,8 +2,8 @@
 @use "../../styles/partials/mixin" as *;
 
 .home {
-	height: 100vh;
 	width: 100vw;
+	height: 100%;
 
 	@include desktop {
 		display: flex;
@@ -11,11 +11,11 @@
 	}
 
 	&__desktop-right-wrapper {
-		height: 100vh;
+		height: 95vh;
 		width: 100vw;
 
 		@include desktop {
-			width: calc(100vw - 40rem);
+			height: 100vh;
 			display: flex;
 			flex-direction: column-reverse;
 		}
