--- a/src/components/MapButton/MapButton.scss
+++ b/src/components/MapButton/MapButton.scss
@@ -2,14 +2,26 @@
 @use "../../styles/partials/mixin" as *;
 
 .map-button {
-	border-radius: 100%;
+	border-radius: 50%;
+	-moz-border-radius: 50%;
+	-webkit-border-radius: 50%;
+	width: 4rem;
+	height: 4rem;
 	padding: 0.8rem 0.8rem;
 	font-size: 1rem;
-	min-width: 6.5rem;
+	background-color: $primary-button-background-color;
+	@include element-shadow;
+
+	&:hover {
+		background-color: $active-button-background-color;
+
+		& > .map-button__icon {
+			fill: unset;
+		}
+	}
 
 	&__icon {
-		height: 10rem;
-		width: 2rem;
+		fill: white;
 	}
 
 	&--active {
