--- a/src/components/ControlMenuGroup/ControlMenuGroup.scss
+++ b/src/components/ControlMenuGroup/ControlMenuGroup.scss
@@ -3,20 +3,13 @@
 
 .control-menu-group {
 	background-color: $primary-panel-background-color;
-	width: 100vw;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	row-gap: $mobile-row-gap;
 
-	max-width: 50rem;
-
-	@include tablet {
-		padding: $tablet-row-gap $tablet-col-gap;
-	}
-
 	@include desktop {
-		width: 40rem;
 		row-gap: $tablet-row-gap;
 		overflow-y: scroll;
 		@include scrollbar;
