--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -17,6 +17,7 @@ $secondary-card-background-color:rgba(107, 207, 207, 0.811);
 
 $primary-button-background-color:#696666;
 $secondary-button-background-color:#d9d9d9;
+$active-button-background-color:  aquamarine;
 $primary-cta-button-background-color:#FFFFFF;
 $primary-cta-button-color: #455eed;
 
